# stateless_codex

./: Cargo.toml  README.md  README_CN.md
src/: lib.rs
src/api/: agent.rs  builder.rs  mod.rs  running_turn.rs  session.rs
src/application/: context_manager.rs  memory_manager.rs  mod.rs  plugin_manager.rs  prompt_builder.rs  request_builder.rs  session_service.rs  skill_resolver.rs  tool_dispatcher.rs  turn_engine.rs
src/domain/: config.rs  content.rs  error.rs  event.rs  hook.rs  ledger.rs  memory.rs  mod.rs  model.rs  plugin.rs  session.rs  skill.rs  tool.rs  turn.rs
src/ports/: memory_storage.rs  mod.rs  model.rs  plugin.rs  session_storage.rs  tool.rs
src/support/: in_memory.rs
tests/: builder_contract.rs  prompt_request_builder.rs  session_lifecycle.rs  turn_engine.rs
tests/common/: mod.rs
