[package]
name = "codex_codex"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["rt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
